--- a/cassandra-count.conf
+++ b/cassandra-count.conf
@@ -1,4 +1,4 @@
-spark.master spark://<private ip of spark master>:7077
+spark.master spark://<private ip of spark master1>:7077,<private ip of spark master2>:7077,<private ip of spark master3>:7077
 spark.executor.memory 1g
 spark.cassandra.connection.host <private IP of a cassandra node>
 spark.cassandra.auth.username iccassandra
