load kafka properties from file

--- a/cassandra-count.conf
+++ b/cassandra-count.conf
@@ -1,8 +1,8 @@
-spark.master spark://<private ip of spark master1>:7077,<private ip of spark master2>:7077,<private ip of spark master3>:7077
+spark.master 10.224.50.35,10.224.82.222,10.224.185.125
 spark.executor.memory 1g
-spark.cassandra.connection.host <private IP of a cassandra node>
+spark.cassandra.connection.host 10.224.50.35
 spark.cassandra.auth.username iccassandra
-spark.cassandra.auth.password <iccassandra password>
+spark.cassandra.auth.password 19ac2973b48060c0f37c3a3f15a80195
 spark.serializer org.apache.spark.serializer.KryoSerializer
 spark.eventLog.enabled true
 spark.eventLog.dir .
