Update example for Instaclustr Kafka and new Kafka consumer API

--- a/cassandra-count.conf
+++ b/cassandra-count.conf
@@ -1,8 +1,10 @@
-spark.master 10.224.50.35,10.224.82.222,10.224.185.125
+spark.master spark://52.4.234.226:7077,107.23.201.172:7077
 spark.executor.memory 1g
-spark.cassandra.connection.host 10.224.50.35
+spark.cassandra.connection.host 52.4.234.226
 spark.cassandra.auth.username iccassandra
-spark.cassandra.auth.password 19ac2973b48060c0f37c3a3f15a80195
+spark.cassandra.auth.password b05dcbbc75a61bf9d990ec9d5d2bcb9d
 spark.serializer org.apache.spark.serializer.KryoSerializer
 spark.eventLog.enabled true
 spark.eventLog.dir .
+//spark.driver.extraJavaOptions -Djava.security.auth.login.config=./loginconf.conf
+//spark.executor.extraJavaOptions -Djava.security.auth.login.config=./loginconf.conf
