--- a/kafka.properties
+++ b/kafka.properties
@@ -1,4 +1,7 @@
-metadata.broker.list=18.207.145.101:9092,18.207.50.50:9092,18.207.170.73:9092
+bootstrap.servers=18.207.145.101:9092,18.207.50.50:9092,18.207.170.73:9092
+group.id=spark-streaming
+key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 security.protocol=SASL_PLAINTEXT
 sasl.mechanism=SCRAM-SHA-256
 sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required \
