update cassandra-count.conf to be an empty template

--- a/cassandra-count.conf
+++ b/cassandra-count.conf
@@ -1,10 +1,8 @@
-spark.master spark://52.4.234.226:7077,107.23.201.172:7077
+spark.master spark://<Spark ip address 1>:7077,<Spark ip address 2>:7077,<Spark ip address 3>
 spark.executor.memory 1g
-spark.cassandra.connection.host 52.4.234.226
-spark.cassandra.auth.username iccassandra
-spark.cassandra.auth.password b05dcbbc75a61bf9d990ec9d5d2bcb9d
+spark.cassandra.connection.host <Cassandra ip address>
+spark.cassandra.auth.username <Cassandra username>
+spark.cassandra.auth.password <Cassandra password>
 spark.serializer org.apache.spark.serializer.KryoSerializer
 spark.eventLog.enabled true
 spark.eventLog.dir .
-//spark.driver.extraJavaOptions -Djava.security.auth.login.config=./loginconf.conf
-//spark.executor.extraJavaOptions -Djava.security.auth.login.config=./loginconf.conf
