fix missing port on spark master url

--- a/cassandra-count.conf
+++ b/cassandra-count.conf
@@ -1,4 +1,4 @@
-spark.master spark://<Spark ip address 1>:7077,<Spark ip address 2>:7077,<Spark ip address 3>
+spark.master spark://<Spark ip address 1>:7077,<Spark ip address 2>:7077,<Spark ip address 3>:7077
 spark.executor.memory 1g
 spark.cassandra.connection.host <Cassandra ip address>
 spark.cassandra.auth.username <Cassandra username>
