add key and value deserializer configs to kafka-secure.properties.template

--- a/kafka-secure.properties.template
+++ b/kafka-secure.properties.template
@@ -1,5 +1,7 @@
 bootstrap.servers=<Kafka ip 1>:9092,<Kafka ip 2>:9092,<Kafka ip 3>:9092
 group.id=spark-streaming
+key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 ssl.enabled.protocols=TLSv1.2,TLSv1.1,TLSv1
 ssl.truststore.location = truststore.jks
 ssl.truststore.password = instaclustr
